[project]
name = "robottelo"
version = "0.1.0"
description = "Robottelo is a test suite which exercises The Foreman."
readme = "README.rst"
authors = [
    {name = "Satellite QE Team"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
requires-python = "~=3.11"
license = {text = "GNU GPL v3.0"}

[project.urls]
Homepage = "https://github.com/SatelliteQE/robottelo"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"*" = ["LICENSE"]

[tool.setuptools.packages.find]
include = ["robottelo*"]
exclude = ["tests*"]

[tool.ruff]
target-version = "py311"
# Allow lines to be as long as 100.
line-length = 100
exclude = [".git", ".hg", ".mypy_cache", ".venv", "_build", "buck-out", "build", "dist"]

[tool.ruff.format]
# Preserve quotes
quote-style = "preserve"  # TODO: change to "single" when flake8-quotes is enabled

[tool.ruff.lint]
fixable = ["ALL"]

select = [
    "B",  # bugbear
    # "C90", # mccabe
    "E",  # pycodestyle
    "F",  # flake8
    "I", # isort
    # "Q",  # flake8-quotes
    "PT",  # flake8-pytest
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "UP",  # pyupgrade
    "W",  # pycodestyle
]

ignore = [
    "B019",  # lru_cache can lead to memory leaks - acceptable tradeoff
    "E501",  # line too long - handled by black
    "PT004", # pytest underscrore prefix for non-return fixtures
    "PT005", # pytest no underscrore prefix for return fixtures
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = [
    "robottelo",
]
combine-as-imports = true

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.pytest.ini_options]
junit_logging = 'all'
addopts = '--show-capture=no'
